--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,3 +10899,68 @@ a.text-dark:focus {
   }
 }
 
+.background-img-wrapper {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.background-img-wrapper img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+h1 {
+  position: relative;
+  z-index: 1;
+}
+
+.planet-card {
+  margin: 0 1% 1.5rem;
+  flex-wrap: wrap;
+  flex-direction: row;
+  flex-basis: 31%;
+  flex-grow: 1;
+  background: rgba(0, 0, 0, 0.8);
+  border: 1px solid #0d4c19;
+}
+
+.planet-card .card-body .card-title,
+.planet-card .card-body .card-text {
+  color: #0ad00d;
+}
+
+.planet-card .card-body .btn-primary {
+  background-color: #0d4c19;
+  border-color: #0ad00d;
+}
+
+.planet-card .card-body .btn-primary:hover {
+  background-color: #0f7923;
+}
+
+.planet-card ul li {
+  font-size: 0.85em;
+  background: transparent;
+  color: #0ad00d;
+  border: 1px solid #0d4c19;
+}
+
+@media only screen and (max-width: 991px) {
+  .planet-card {
+    flex-basis: 48%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .planet-card {
+    margin: 0 0 1.5rem;
+    flex-basis: 100%;
+  }
+}
+
