--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,62 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.background-img-wrapper {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    img {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        object-fit: cover;
+    }
+}
+
+h1 {
+    position: relative;
+    z-index: 1;
+}
+.planet-card {
+    margin: 0 1% 1.5rem;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex-basis: 31%; 
+    flex-grow: 1;
+    background: rgba(0,0,0,0.8);
+    border: 1px solid #0d4c19;
+    .card-body {
+        .card-title, .card-text {
+            color: #0ad00d;
+        }
+        .btn-primary {
+            background-color: #0d4c19;
+            border-color: #0ad00d;
+            &:hover {
+                background-color: #0f7923;
+            }
+        }
+    }
+    ul li {
+        font-size: 0.85em;
+        background: transparent;
+        color: #0ad00d;
+        border: 1px solid #0d4c19;
+    }
+}
+
+@media only screen and (max-width:991px) {
+    .planet-card {
+        flex-basis: 48%;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    .planet-card {
+        margin: 0 0 1.5rem;
+        flex-basis: 100%;
+    }
+}
