--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,6 +10899,111 @@ a.text-dark:focus {
   }
 }
 
+.tns-outer {
+  position: relative;
+  margin: 0 0 3rem;
+}
+
+.tns-outer .tns-nav {
+  position: absolute;
+  right: 0;
+  bottom: -25px;
+  left: 0;
+  text-align: center;
+  z-index: 2;
+}
+
+.tns-outer .tns-nav button {
+  width: 20px;
+  height: 2px;
+  margin: 0 2px;
+  padding: 0;
+  background: #CCC;
+  border: none;
+  -webkit-appearance: none;
+}
+
+.tns-outer .tns-nav button.tns-nav-active {
+  background: #3490DC;
+}
+
+.tns-outer .tns-nav ~ button {
+  display: none;
+}
+
+.tns-outer .tns-controls {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 27px;
+  margin: -30px 0 0;
+  z-index: 2;
+}
+
+.tns-outer .tns-controls button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  color: #212529;
+  background: rgba(233, 233, 233, 0.5);
+  border: none;
+  -webkit-appearance: none;
+}
+
+.tns-outer .tns-controls button i {
+  position: relative;
+  top: 1px;
+}
+
+.tns-outer .tns-controls button:first-of-type {
+  left: 0;
+  border-radius: 50%;
+}
+
+.tns-outer .tns-controls button:last-of-type {
+  right: 0;
+  border-radius: 50%;
+}
+
+.tns-outer .tns-controls ~ button {
+  display: none;
+}
+
+.planets-slider .planet {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 15px;
+  background: #000;
+  border-radius: 50%;
+}
+
+.planets-slider h5,
+.planets-slider p {
+  text-shadow: 0 0 2px rgba(30, 30, 30, 0.5);
+}
+
+.planets-slider p {
+  font-size: 0.85em;
+}
+
+.planets-slider p span {
+  color: #d6d6d6;
+}
+
+.planets-slider .tns-item {
+  transform: scale(0.75);
+  opacity: 0.6;
+  transition: all 0.5s ease-in;
+}
+
+.planets-slider .tns-item:not(.tns-slide-active) + .tns-slide-active + .tns-slide-active {
+  transform: scale(1);
+  opacity: 1;
+}
+
 .background-img-wrapper {
   top: 0;
   right: 0;
@@ -10913,6 +11018,7 @@ a.text-dark:focus {
   max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  opacity: 0.7;
 }
 
 h1 {
@@ -10920,47 +11026,10 @@ h1 {
   z-index: 1;
 }
 
-.planet-card {
-  margin: 0 1% 1.5rem;
-  flex-wrap: wrap;
-  flex-direction: row;
-  flex-basis: 31%;
-  flex-grow: 1;
-  background: rgba(0, 0, 0, 0.8);
-  border: 1px solid #0d4c19;
-}
-
-.planet-card .card-body .card-title,
-.planet-card .card-body .card-text {
-  color: #0ad00d;
-}
-
-.planet-card .card-body .btn-primary {
-  background-color: #0d4c19;
-  border-color: #0ad00d;
-}
-
-.planet-card .card-body .btn-primary:hover {
-  background-color: #0f7923;
-}
-
-.planet-card ul li {
-  font-size: 0.85em;
-  background: transparent;
-  color: #0ad00d;
-  border: 1px solid #0d4c19;
-}
-
-@media only screen and (max-width: 991px) {
-  .planet-card {
-    flex-basis: 48%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .planet-card {
-    margin: 0 0 1.5rem;
-    flex-basis: 100%;
+@media only screen and (max-width: 768px) {
+  .planets-slider .tns-item {
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
