--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,6 +10899,10 @@ a.text-dark:focus {
   }
 }
 
+body > div {
+  overflow-x: hidden;
+}
+
 .tns-outer {
   position: relative;
   margin: 0 0 3rem;
@@ -10971,15 +10975,6 @@ a.text-dark:focus {
   display: none;
 }
 
-.planets-slider .planet {
-  display: block;
-  width: 50px;
-  height: 50px;
-  margin: 0 auto 15px;
-  background: #000;
-  border-radius: 50%;
-}
-
 .planets-slider h5,
 .planets-slider p {
   text-shadow: 0 0 2px rgba(30, 30, 30, 0.5);
@@ -11004,6 +10999,91 @@ a.text-dark:focus {
   opacity: 1;
 }
 
+.planet {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 15px;
+  background: #000;
+  border-radius: 50%;
+}
+
+.nav-item {
+  min-width: 80px;
+}
+
+.nav-item .nav-link {
+  padding: 0.5rem 1rem;
+  overflow: hidden;
+}
+
+.nav-item .nav-link .planet {
+  width: 30px;
+  height: 30px;
+  margin: 0 auto 5px;
+}
+
+.nav-item .nav-link .planet ~ span {
+  position: relative;
+  width: 100%;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: -88px;
+  z-index: 1;
+  transition: all 0.25s ease-in;
+}
+
+.menu.open-menu {
+  left: 0;
+}
+
+.menu .menu-toggle {
+  position: absolute;
+  width: 30px;
+  height: 150px;
+  left: 100%;
+  top: 50px;
+  padding: 0 1rem;
+  border-radius: 0 5px 5px 0;
+}
+
+.menu .menu-toggle span {
+  position: relative;
+  top: 30%;
+  left: -50px;
+  width: 100px;
+  display: block;
+  height: 24px;
+  margin: 6px 0 0;
+  transform: rotate(-90deg);
+}
+
+.menu .nav {
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-around;
+}
+
+.canvas {
+  position: relative;
+  transition: all 0.5s ease-in;
+}
+
+.canvas.open {
+  transform: translate(45%, 0);
+}
+
+.canvas .off-canvas-btn {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  z-index: 1;
+  display: none;
+}
+
 .background-img-wrapper {
   top: 0;
   right: 0;
@@ -11026,10 +11106,56 @@ h1 {
   z-index: 1;
 }
 
+.extra-padding {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
 @media only screen and (max-width: 768px) {
   .planets-slider .tns-item {
     transform: scale(1);
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 530px), screen and (max-height: 530px) {
+  .menu,
+  .menu.open-menu {
+    position: absolute;
+    left: 0;
+    z-index: 0;
+  }
+
+  .menu .nav,
+  .menu.open-menu .nav {
+    flex-direction: row;
+    flex-grow: inherit;
+  }
+
+  .menu .nav .nav-item,
+  .menu.open-menu .nav .nav-item {
+    width: 100%;
+  }
+
+  .menu .nav .nav-item .nav-link .planet,
+  .menu.open-menu .nav .nav-item .nav-link .planet {
+    float: left;
+    margin: 0 10px 0 0;
+  }
+
+  .menu .nav .nav-item .nav-link .planet ~ span,
+  .menu.open-menu .nav .nav-item .nav-link .planet ~ span {
+    top: 4px;
+    width: inherit;
+  }
+
+  .canvas .off-canvas-btn {
+    display: block;
+  }
+
+  .extra-padding {
+    padding-left: inherit;
+    padding-right: inherit;
   }
 }
 
