--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10995,6 +10995,7 @@ body > div {
   font-family: "Open Sans", sans-serif;
   font-size: 7rem;
   letter-spacing: 1rem;
+  text-shadow: 12px 5px 40px rgba(30, 30, 30, 0.5);
 }
 
 .jumbotron .lead {
