--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -95,6 +95,7 @@ body > div {
     font-family: $font-open-sans;
     font-size: 7rem;
     letter-spacing: 1rem;
+    text-shadow: 12px 5px 40px rgba(30, 30, 30, 0.5);
   }
   .lead {
     width: 600px;
