--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10972,6 +10972,7 @@ body > div {
 
 .jumbotron {
   min-height: 700px;
+  margin: 0;
   padding-top: 5rem;
 }
 
@@ -10988,7 +10989,7 @@ body > div {
 
 .jumbotron .jumbotron-banner-gradient {
   background: #000;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.925) 0%, rgba(253, 187, 45, 0) 45%);
+  background: linear-gradient(0deg, black 0%, rgba(253, 187, 45, 0) 60%);
 }
 
 .jumbotron h1 {
