--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,6 +76,7 @@ body > div {
 
 .jumbotron {
   min-height: 700px;
+  margin: 0;
   padding-top: 5rem;
   figure, 
   .jumbotron-banner-gradient {
@@ -89,7 +90,7 @@ body > div {
   }
   .jumbotron-banner-gradient {
     background: #000; 
-    background: linear-gradient(0deg, rgba(0,0,0,0.925) 0%, rgba(253,187,45,0) 45%);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(253,187,45,0) 60%);
   }
   h1 {
     font-family: $font-open-sans;
