--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -225,6 +225,83 @@ body > div {
     }
 }
 
+.system {
+  list-style-type: none;
+  display: flex;
+  width: 100%;
+  padding: 1rem 2rem 1rem 0;
+  background: #000;
+  justify-content: space-between;
+  li {
+    display: flex;
+    flex-wrap: wrap;
+    p {
+      width: 100%;
+      margin: 0;
+      color: #FFF;
+      line-height: 120%;
+      text-align: center;
+      span {
+        display: block;
+        font-size: 0.75em;
+      }
+      &:first-of-type {
+        align-self: flex-start;
+      }
+      &:last-of-type {
+        align-self: flex-end;
+      }
+    }
+    div {
+      width: 70px;
+      height: 70px;
+      margin: 0.75rem auto;
+      border: 1px solid #FFF;
+      border-radius: 50%;
+      align-self: center;
+    }
+    &.sun {
+      padding: 0 1rem;
+      border-right: 2px solid #FF0;
+      border-radius: 50%;
+      p:first-of-type {
+        align-self: center;
+      }
+    }
+    &.mercury {
+      div {
+        width: 10px;
+        height: 10px;
+      }
+    }
+    &.venus, &.earth {
+      div {
+        width: 20px;
+        height: 20px;
+      }
+    }
+    &.mars {
+      div {
+        width: 13px;
+        height: 13px;
+      }
+     
+    }
+    &.saturn {
+      div {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    &.uranus, &.neptune {
+      div {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+}
+
 h1 {
     position: relative;
     z-index: 1;
