fix: zero out margin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11145,6 +11145,7 @@ body > div {
   list-style-type: none;
   display: flex;
   width: 100%;
+  margin: 0;
   padding: 1rem 2rem 1rem 0;
   background: #000;
   justify-content: space-between;
