--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11312,6 +11312,21 @@ h1 {
   .planetary-stat {
     flex: 0 0 50%;
   }
+
+  .system {
+    padding: 4rem 2rem;
+    flex-wrap: wrap;
+  }
+
+  .system li {
+    margin: 0 2.5% 1rem;
+    flex-basis: 20%;
+    flex-grow: 1;
+  }
+
+  .system li.sun {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
