feat: add secondary `stats` section

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11003,6 +11003,11 @@ body > div {
   width: 600px;
 }
 
+.stats {
+  padding: 8rem 2rem;
+  background: #000;
+}
+
 .planetary-stat {
   flex: 1 1 auto;
   font-size: 1.5rem;
@@ -11013,6 +11018,11 @@ body > div {
   font-size: 0.5em;
   font-weight: 300;
   text-transform: uppercase;
+}
+
+.planetary-stat span span {
+  font-size: inherit;
+  color: #666;
 }
 
 .planets-slider h5,
