--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -389,10 +389,16 @@ body > div {
         margin: 0 0 6rem;
         padding: 0 0 0 6rem;
         li {
+          position: relative;
           margin: 0 0 1rem;
           color: #FFF;
           &:last-of-type {
             margin: 0;
+          }
+          i {
+            position: absolute;
+            top: 4px;
+            left: -25px;
           }
         }
       }
@@ -467,6 +473,18 @@ h1 {
     h1 {
       font-size: 12rem;
       letter-spacing: 1rem;
+    }
+  }
+}
+
+@media only screen and (max-width:768px) {
+  .features {
+    .features-slider {
+      .background {
+        .banner-gradient {
+          background: linear-gradient(60deg, rgba(0,0,0,0.33) 40%, rgba(0,0,0,0.85) 66%);
+        }
+      }
     }
   }
 }
