feat: add `d3` SVG chart and dummy data

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11381,6 +11381,7 @@ body > div {
 .indepth .further-details div {
   display: flex;
   align-items: flex-end;
+  margin: 0 auto;
 }
 
 .indepth .further-details div p {
