--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -425,6 +425,7 @@ body > div {
   .further-details {
     div {
       display: flex;
+      margin: 0 auto;
       align-items: flex-end;
       p {
         color: #999;
