--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11379,9 +11379,8 @@ body > div {
 }
 
 .indepth .further-details div {
-  display: flex;
-  margin: 0 auto;
-  align-items: flex-end;
+  width: 200px;
+  margin: 0 auto 1rem;
 }
 
 .indepth .further-details div p {
@@ -11404,6 +11403,27 @@ body > div {
   display: block;
   font-size: 2rem;
   color: #FFF;
+}
+
+.indepth .further-details .element-table tr:first-of-type {
+  background: #333;
+  font-weight: 700;
+}
+
+.indepth .further-details .element-table tr td {
+  padding: 1px 6px;
+  color: #FFF;
+  border-bottom: 1px solid #000;
+  border-right: 1px solid #000;
+}
+
+.indepth .further-details .element-table tr td:last-of-type {
+  border-right: none;
+}
+
+.indepth .further-details .element-table tr td .key {
+  width: 100%;
+  height: 3px;
 }
 
 h1 {
