--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -424,9 +424,8 @@ body > div {
   }
   .further-details {
     div {
-      display: flex;
-      margin: 0 auto;
-      align-items: flex-end;
+      width: 200px;
+      margin: 0 auto 1rem;
       p {
         color: #999;
       }
@@ -442,6 +441,27 @@ body > div {
             display: block;
             font-size: 2rem;
             color: #FFF;
+          }
+        }
+      }
+    }
+    .element-table {
+      tr {
+        &:first-of-type {
+          background: #333;
+          font-weight: 700;
+        }
+        td {
+          padding: 1px 6px;
+          color: #FFF;
+          border-bottom: 1px solid #000;
+          border-right: 1px solid #000;
+          &:last-of-type {
+            border-right: none;
+          }
+          .key {
+            width: 100%;
+            height: 3px;
           }
         }
       }
